spacing fix for search filter typeahead components

--- a/src/_scss/pages/search/filters/location/_typeahead.scss
+++ b/src/_scss/pages/search/filters/location/_typeahead.scss
@@ -1,3 +1,9 @@
+.pop-typeahead:first-child {
+    .usa-da-typeahead {
+        margin-top: 0;
+    }
+}
+
 .usa-da-typeahead {
     margin-top: 2rem;
 
